[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/menu/input_menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/menu/cell.tscn" type="PackedScene" id=2]

[node name="input_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="vbox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 245.0
margin_top = 21.0
margin_right = -48.0
margin_bottom = -29.0

[node name="1p_up" parent="vbox" instance=ExtResource( 2 )]
title = "1P:UP"

[node name="1p_down" parent="vbox" instance=ExtResource( 2 )]
margin_top = 24.0
margin_bottom = 44.0
title = "1P:DOWN"

[node name="1p_left" parent="vbox" instance=ExtResource( 2 )]
margin_top = 48.0
margin_bottom = 68.0
title = "1P:LEFT"

[node name="1p_right" parent="vbox" instance=ExtResource( 2 )]
margin_top = 72.0
margin_bottom = 92.0
title = "1P:RIGHT"

[node name="1p_a" parent="vbox" instance=ExtResource( 2 )]
margin_top = 96.0
margin_bottom = 116.0
title = "1P:A"

[node name="1p_b" parent="vbox" instance=ExtResource( 2 )]
margin_top = 120.0
margin_bottom = 140.0
title = "1P:B"

[node name="1p_c" parent="vbox" instance=ExtResource( 2 )]
margin_top = 144.0
margin_bottom = 164.0
title = "1P:C"

[node name="1p_d" parent="vbox" instance=ExtResource( 2 )]
margin_top = 168.0
margin_bottom = 188.0
title = "1P:D"

[node name="cancel" type="Button" parent="."]
margin_left = 34.0
margin_top = 26.0
margin_right = 191.0
margin_bottom = 50.0
text = "cancel"

[connection signal="pressed" from="cancel" to="." method="_on_cancel_pressed"]
